2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Remove silly warning

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Make info-file-searching respect NoAutoIndex

2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Stop installing path-prefix dirs
	* PkgVersion.pm: Create path-prefix dirs dynamically, so they work even
	during bootstrap.

2005-04-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Make folks use get_parent instead
	of $pkg->{parent}
	* PkgVersion.pm, Package.pm: Use proxy objects to make package info read
	on-demand only. See comment near the top of PkgVersion.pm

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Bootstrap.pm: use two possible path prefixes,
	path-prefix-g++-3.3 and path-prefix-g++-4.0, depending on the
	current Distribution

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Yet another splitoffs fix.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Fix another get_splitoffs error.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Fix get_splitoffs error.

2005-04-22  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: More intelligent warning if parsing a file with CVS
	conflicts.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Timeout using alarm, rather than busy-waiting.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Make locking nicer.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Engine.pm: Fix some relatives and splitoffs calls.

2005-04-22  Daniel Macks  <dmacks@netspace.org>

	* Config.pm, Engine.pm, Package.pm, PkgVersion.pm, SelfUpdate.pm:
	Convert binary_requested() from a function to an object method.

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Add options to index command.
